# youtube-data-scrapper

./: # .gitignore  app.py  main.py  models.py  procfile  pyproject.toml  readme.md  requirements.txt
attached_assets/: youtube-scraper-prd.md
static/css/: style.css
static/js/: script.js
templates/: index.html  layout.html  results.html
yt_scraper/: __init__.py  api.py  exporter.py  utils.py
